--- a/ChatWeb-Server/package.json
+++ b/ChatWeb-Server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
     "@types/bcrypt": "^5.0.2",
+    "aws-sdk": "^2.1621.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -27,6 +28,8 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "otp-generator": "^4.0.1",
     "socket.io": "^4.7.5",
     "xss": "^1.0.15",
