--- a/ChatWeb_CNM/package.json
+++ b/ChatWeb_CNM/package.json
@@ -17,6 +17,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1621.0",
     "axios": "^1.6.8",
     "emoji-mart": "^5.2.2",
     "faker": "^6.6.6",
@@ -26,10 +27,12 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-embed": "^3.7.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.50.1",
     "react-i18next": "^11.18.6",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
